--- a/templates/login.html
+++ b/templates/login.html
@@ -16,12 +16,12 @@
     />
   </head>
   <body class="bg">
-      <form method="post" action="/" class="container mt-5">
+      <form method="post" action="/" class="container mt-5 w-50">
         <div class="card p-5">
           <h1 class="mb-4">Login</h1>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <span class="input-group-text"><i class=  "fa fa-user"></i></span>
+              <span class="input-group-text"><i class="fa fa-user"></i></span>
             </div>
             <input
               type="text"
