--- a/templates/register.html
+++ b/templates/register.html
@@ -8,8 +8,8 @@
      </head>
   	<body class="bg">
    		<div class="container">
-      		<form method="post" action="/register" class="container mt-5">
-				<div class="card p-5" class="rinku">
+      		<form method="post" action="/register" class="container mt-5 w-50">
+				<div class="card p-5">
 					<h1 class="mb-4">Sign up</h1>
 					<div class="input-group mb-3">
 						<div class="input-group-prepend">
