--- a/static/css/dashboard_style.css
+++ b/static/css/dashboard_style.css
@@ -55,8 +55,8 @@
 
 
 .footer {
-  position: absolute;
-  bottom: 1;
+  position: fixed;
+  bottom: 0;
   width: 100%;
   height: 4%;
   background: #385d8a;
