--- a/static/css/style.css
+++ b/static/css/style.css
@@ -275,6 +275,7 @@ label {
     color: #fff
 }
 
+
 #size label {
     margin: 10px;
     margin-left: 0px
@@ -704,4 +705,14 @@ input[type="range"]::-moz-range-thumb{
   pointer-events: auto;
   -moz-appearance: none;
   box-shadow: 0 0 6px rgba(0,0,0,0.05);
+}
+
+
+.box1 {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    text-align: center;
+    margin-bottom: 20px;
+    object-fit: auto ;
 }
