--- a/templates/about.html
+++ b/templates/about.html
@@ -19,10 +19,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto" style="color: white;">
         <li class="nav-item ">
-          <a class="nav-link" href="/dashboard">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/dashboard">Home</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="/index">Comparision <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/compare">Comparision </a>
         </li>
         <li class="nav-item ">
           <a class="nav-link" href="#">About</a>
